# license

./: .gitignore  CMakeLists.txt  fp_gen.cpp  genLicense.cpp  generate.cpp  rsa.cpp  verify.cpp
cpp/: CMakeLists.txt
cpp/hmac/: CMakeLists.txt  license_gen.cpp
cpp/rsa/: CMakeLists.txt  common.hpp  docker.cpp  generate.cpp
go/: expiration_time.go  license_common.go  license_gen.go  license_verify.go  todo.txt
hmac/: CMakeLists.txt  hardware_utils.cpp  hardware_utils.h  license_verify.cpp
